app/mobile.css
@media (max-width: 768px) {
    .form-label {
        font-size: .7rem;
        padding-top: 4px;
        padding-right: 4px;
        padding-bottom: 0px;
        width: 100px;
    }
    
    .form-value {
        font-size: .7rem;
        min-width: 50%;
        padding-bottom: 0px;
    }

    .form-subscript {
        font-size: .4rem;
        margin-top: 1px;
    }

    button {
        border-radius: 5px;
        min-width: 180px;
        padding: 8px;
    }
    
    h1 {
        font-size: 2rem;
    }
    
    html, body, button {
        font-size: 1.2rem;
    }

    input, textarea {
        font-size: .7rem;
        padding: 4px;
    }

    textarea {
        width: 100%;
        height: 4rem;
    }

    .webcam {
        width: 100%;
        object-fit: fill;
    }
}

